# logging

./: CMakeLists.txt  CMakeListsX.txt  CMakePresets.json  LICENSE  demo_simple.c  logging_lib.code-workspace  readme.md  test_cpp.cpp
example/test_main/: test.c
example/test_module/: CMakeLists.txt
example/test_module/inc/: module.h
example/test_module/src/: module.c
logging/: CMakeLists.txt
logging/cfg/: logging_cfg.h
logging/doc/: logging_doc.md  readme.md
logging/inc/: logging.h  logging_levels.h  logging_stack.h  logging_transport.h
logging/src/: logging.c
test/: CMakeLists.txt  test.c
test_main/: CMakeLists.txt  test.c
test_module/: CMakeLists.txt  module.c
test_module/src/: module.c
